Fix Jejunum, TerrainBugFix on asteroids, more loading screens, MM changes for Kialla system,
* Correctly define Solin's biome map so it will show up.
* Remove backslashes from Tritonis filepaths.
* Fix the terrain material bug on non 'Ultra' terrain settings on Naharosmank, Welkendon, Schmev, and Gershmurzelen.
* Fix for references to N2, H2, and O2 being referred to as "elemental" instead of "molecular" in Triston science definitions.
* Add Jejunum ColdColor.png; fix for Jejunum's terrain being completely broken.
* Replace @Kopernicus:AFTER[KOPERNICUS] lines on Kialla's moon configs with @Kopernicus:FOR[PJ2]. This likely doesn't fix the recurring problem with it unless ModuleManager somehow behaves differently on linux, but it should have been done anyway.
* Add loading screens: Far Wars by Interplanet Janet, Togetherness by Wolf-Rayet, and Farmer by Luna Gregoria

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek.cfg
@@ -60,7 +60,7 @@
 			Material
 			{
 				
-				rimColorRamp = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Blue.png
+				rimColorRamp = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/Blue.png
 				rimPower = 0.4
 				rimBlend = 0.2
 				color = 1, 1, 1, 1
@@ -69,8 +69,8 @@
 			}
 			OnDemand
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\gasplanet3v3.dds
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\TechoGIantNormal.dds
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/gasplanet3v3.dds
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/TechoGIantNormal.dds
 			}
 		}
 	}
