--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/6_Asteroid_Schmev.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/6_Asteroid_Schmev.cfg
@@ -129,7 +129,7 @@
 			minDetailDistance = 8
 			maxQuadLengthsPerFrame = 0.03
 			deactivateAltitude = 10000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
