--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/7_Asteroid_Gershmurzelen.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_ba_ASTEROID_BELT/7_Asteroid_Gershmurzelen.cfg
@@ -100,7 +100,7 @@
 			fadeStart = 9000
 			fadeEnd = 9500
 			deactivateAltitude = 10000
-			materialType = AtmosphericTriplanarZoomRotation
+			//materialType = AtmosphericTriplanarZoomRotation
 			Mods
 			{
 				VertexColorMap
