--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/ScienceDefinitions/AtmosphereScanner.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_f/ScienceDefinitions/AtmosphereScanner.cfg
@@ -8,8 +8,8 @@
 			Values
 			{
 				FlyingHigh = The sensor begins to detect traces of Nitrogen, Carbon, and Oxygen before the heat from entry begins to fudge the readings.
-				FlyingLow = The sensor reads: 83% Elemental Nitrogen (N2) / 14% Carbon Monoxide (CO) / 2% Elemental Krypton (Kr) / ~0.5% Elemental Argon (Ar) / ~0.5% Osmium Tetroxide / TRACE% Elemental Neon (Ne) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Oxygen (O2) / TRACE% Ozone (O3) / TRACE% Elemental Mercury Vapor(Hg) / TRACE% Elemental Radon (Rn)
-				SrfLanded = The sensor reads: 83% Elemental Nitrogen (N2) / 14% Carbon Monoxide (CO) / 2% Elemental Krypton (Kr) / ~0.5% Elemental Argon (Ar) / ~0.5% Osmium Tetroxide / TRACE% Elemental Neon (Ne) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Oxygen (O2) / TRACE% Ozone (O3) / TRACE% Elemental Mercury Vapor(Hg) / TRACE% Elemental Radon (Rn)
+				FlyingLow = The sensor reads: 83% Molecular Nitrogen (N2) / 14% Carbon Monoxide (CO) / 2% Elemental Krypton (Kr) / ~0.5% Elemental Argon (Ar) / ~0.5% Osmium Tetroxide / TRACE% Elemental Neon (Ne) / TRACE% Elemental Xenon (Xe) / TRACE% Molecular Oxygen (O2) / TRACE% Ozone (O3) / TRACE% Elemental Mercury Vapor(Hg) / TRACE% Elemental Radon (Rn)
+				SrfLanded = The sensor reads: 83% Molecular Nitrogen (N2) / 14% Carbon Monoxide (CO) / 2% Elemental Krypton (Kr) / ~0.5% Elemental Argon (Ar) / ~0.5% Osmium Tetroxide / TRACE% Elemental Neon (Ne) / TRACE% Elemental Xenon (Xe) / TRACE% Molecular Oxygen (O2) / TRACE% Ozone (O3) / TRACE% Elemental Mercury Vapor(Hg) / TRACE% Elemental Radon (Rn)
 				SrfSplashed = The sensor begins to only read Carbon Monoxide, Krypton, and Argon as it dips into the supercritical "liquid."
 			}
 		}
@@ -19,7 +19,7 @@
 			Values
 			{
 				FlyingHigh = The sensor detects Hydrogen, Helium, Carbon, and Oxygen before the heat from entry begins to fudge the readings.
-				FlyingLow = The sensor reads: 90.75% Elemental Hydrogen (H2) / 7.25% Elemental Helium (He) / 1.9% Carbon Monoxide (CO) / ~0.05% Elemental Krypton (Kr) / ~0.05% Ammonia (NH3) / TRACE% Water Vapor (H2O) / TRACE% Methane (CH4) / TRACE% Hydrogen Deuteride (HD) / TRACE% Hydrogen Sulfide (H2S) / TRACE% Elemental Argon (Ar) / TRACE% Elemental Neon (Ne)
+				FlyingLow = The sensor reads: 90.75% Molecular Hydrogen (H2) / 7.25% Elemental Helium (He) / 1.9% Carbon Monoxide (CO) / ~0.05% Elemental Krypton (Kr) / ~0.05% Ammonia (NH3) / TRACE% Water Vapor (H2O) / TRACE% Methane (CH4) / TRACE% Hydrogen Deuteride (HD) / TRACE% Hydrogen Sulfide (H2S) / TRACE% Elemental Argon (Ar) / TRACE% Elemental Neon (Ne)
 			}
 		}
 		Body
@@ -28,8 +28,8 @@
 			Values
 			{
 				FlyingHigh = The sensor detects Nitrogen, Oxygen, and Krypton before the heat from entry begins to fudge the readings.
-				FlyingLow = The sensor reads: 83% Elemental Nitrogen (N2) / 14% Elemental Oxygen (O2) / 2% Elemental Krypton (Kr) / ~1% Elemental Argon (Ar) / TRACE% Water Vapor (H2O) / TRACE% Elemental Iodine Vapor (I2) / TRACE% Elemental Helium (He) / TRACE% Elemental Neon (Ne) / TRACE% Carbon Dioxide (CO2) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Radon (Rn)
-			}	SrfLanded = The sensor reads: 83% Elemental Nitrogen (N2) / 14% Elemental Oxygen (O2) / 2% Elemental Krypton (Kr) / ~1% Elemental Argon (Ar) / TRACE% Water Vapor (H2O) / TRACE% Elemental Iodine Vapor (I2) / TRACE% Elemental Helium (He) / TRACE% Elemental Neon (Ne) / TRACE% Carbon Dioxide (CO2) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Radon (Rn)
+				FlyingLow = The sensor reads: 83% Molecular Nitrogen (N2) / 14% Molecular Oxygen (O2) / 2% Elemental Krypton (Kr) / ~1% Elemental Argon (Ar) / TRACE% Water Vapor (H2O) / TRACE% Elemental Iodine Vapor (I2) / TRACE% Elemental Helium (He) / TRACE% Elemental Neon (Ne) / TRACE% Carbon Dioxide (CO2) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Radon (Rn)
+			}	SrfLanded = The sensor reads: 83% Molecular Nitrogen (N2) / 14% Molecular Oxygen (O2) / 2% Elemental Krypton (Kr) / ~1% Elemental Argon (Ar) / TRACE% Water Vapor (H2O) / TRACE% Elemental Iodine Vapor (I2) / TRACE% Elemental Helium (He) / TRACE% Elemental Neon (Ne) / TRACE% Carbon Dioxide (CO2) / TRACE% Elemental Xenon (Xe) / TRACE% Elemental Radon (Rn)
 
 		}
 		Body
