--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
@@ -111,8 +111,6 @@
 		{
 			minLevel = 2
 			maxLevel = 9
-			minDetailDistance = 8
-			maxQuadLengthsPerFrame = 0.03
 			fadeStart = 20000
 			fadeEnd = 22500
 			deactivateAltitude = 23000
@@ -126,7 +124,7 @@
 				}
 				@VertexColorMap:NEEDS[EnvironmentalVisualEnhancements]
 				{
-					@map = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Jejunum_ColdColor.dds
+					@map = PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/PluginData/Jejunum_ColdColor.png
 				}
 				VertexHeightMap
 				{
