Increase Ollo mass; Bifrost backlit rings, Heimdall texture
* Increase mass of Ollo by a factor of 10 to correct a mistake Snails made during development. Note that I haven't yet taken a look at any other moons or the SOIs to see if they make sense.
* Add backlit texture to Bifrost's rings.
* Add a higher resolution texture to Heimdall.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/0-Bifrost.cfg
@@ -104,6 +104,12 @@
 				steps = 5000
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Bifrost_Rings.png
 				color = 0.70,0.57,0.45,1	//pure Pyri-light. More accurate three-star combined color is 0.70,0.63,0.56,1, but pure Pyri looks better since you can only see it well looking at the Pyri-lit side.
+				
+				albedoStrength = 1.0
+				scatteringStrength = 1.0
+				anisotropy = 0.65
+				backlitTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Bifrost_Rings_Backlit.png
+				
 				unlit = false
 				useNewShader = true
 				penumbraMultiplier = 1
