--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/X-Bifrost_ImprovedDisk.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/X-Bifrost_ImprovedDisk.cfg
@@ -13,6 +13,12 @@
 				steps = 5000
 				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Bifrost_Rings.png
 				color = 0.70,0.57,0.45,1	//adjusted to pure Pyri-light
+				
+				albedoStrength = 1.0
+				scatteringStrength = 1.0
+				anisotropy = 0.65
+				backlitTexture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/PluginData/Bifrost_Rings_Backlit.png
+				
 				unlit = false
 				useNewShader = true
 				penumbraMultiplier = 1
@@ -28,7 +34,6 @@
 		{
 			name = Jool
 			removeAtmosphere = true
-			removeProgressTree = True
 		}
 		Properties
 		{
@@ -59,7 +64,6 @@
 		{
 			name = Jool
 			removeAtmosphere = true
-			removeProgressTree = True
 		}
 		Properties
 		{
