Integrate Alternate Realism Configuration
Leganeski published a set of patches called Planet Jam 2: Alternate Realism Configuration. It contains mostly bugfixes rather than design changes, so this patch aims to make PJ2ARC obsolete. Though it's not exactly the same. The changes to Jones have been revoked, and the density of Gwargin's moons isn't quite as high as in PJ2ARC. Changelog:
* Density of Phe & Ber increased by factor of 50x.
* Density of Deibos and Phomos increased by like a couple orders of magnitude to be consistent with a rocky or rocky-icy rubble pile density.
* Rangon is 10 times denser, consistent with iron-rocky composition.
* Atmospheres of Viszra, Jejunum, Cricoid, and Zeppeli had been given molar mass of hydrogen, making airplanes unrealistically ineffective. The atmospheric scale heights are still unrealistic, but now they have realistic molar masses, mostly consistent with nitrogen atmospheres.
* Increase Hadfield's density by factor of 10.
* Decrease mass of Blitzo by factor of 10.
* Beddul & Dopale have much more realistic atmosphere physics.
* Add canonical atmospheric composition to Dopale and Beddul science.
* Science definitions changes for a few small bodies.
* Add a hidden setting for accessing a hidden setting.

--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/1_Phe.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/1_Phe.cfg
@@ -24,8 +24,9 @@
 			initialRotation = 245
 			
 
-			// 1/100 earth mass in kilograms
-			mass = 1.06e13
+			//mass = 1.06e13 //original mass by Wolf Rayet. Leganeski raised by 100x which is too high for a ring moonlet. Raised by 50x instead.
+			mass =  5.3e14
+			//density = 1.58 gcm3 RSS scale
 			ScienceValues
  		        {
 				//uh
