--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/3_Deibos.cfg
@@ -22,7 +22,12 @@
 			sphereOfInfluence = 10000
 			initialRotation = 220
 			
-			geeASL = 0.00450
+			
+			
+			//geeASL = 0.00450 //wolf-rayet's original gravity.
+			
+			mass = 2.07517098e16
+			//density = 14.7 g/cm^3 (1.47gcm3 at rss scale)
 			ScienceValues
  		        {
 				//uh
