--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/4_Phomos.cfg
@@ -23,9 +23,12 @@
 			sphereOfInfluence = 9000
 			initialRotation = 60
 			
-			geeASL = 0.00357
-			// 1/100 earth mass in kilograms
-			mass = 2.9524e13
+			//geeASL = 0.00357 //WR contradictory surface gravity value.
+			//mass = 2.9524e13 //wolf-rayet's original mass value
+			
+			mass = 3.97132497e15
+			//density = 18.8 g/cm^3 (rss density is 1.88 gcm3)
+			//mass & density here assumes Phomos is an oblate spheroid, which is a slightly better approximation than assuming it's a sphere of radius 3km.
 			ScienceValues
  		        {
 				//uh
