--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/ScienceDefs/StockDefs/ScienceDefs.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/AlternateVersion/CBx/ScienceDefs/StockDefs/ScienceDefs.cfg
@@ -135,7 +135,8 @@
 			Values
 			{
 				InSpace = Here, around this ridiculous, rapidly rotating space crystal so far above Zhandar's north pole, you can't help but begin to feel like your actions are not your own, that you're being puppeted by powers far beyond your understanding.
-				SrfLandedEquator = Surface gravity is negative. VERY negative.
+				SrfLandedEquator = Surface gravity is negative. VERY negative. Perhaps a landing site near the poles would be less... precarious?
+				SrfLanded = The more time you spend on the surface of this enigma, the more your attention turns back to the sky and the planet below. Your... hmm... the words you try to fit in feel incorrect. Is 'compatriots 'what you really mean? Your compatriots might find more interest in this oddity, but not you. Even the models you've made of these things--tiny minds which flit back and forth between the worlds in little metal boxes--are beginning to lose their shine. You'd need more specimens to really derive interest.
 			}
 		}
 	}
@@ -149,8 +150,10 @@
 			name = PJ2/Ploob //Ploob
 			Values
 			{
-				InSpace = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
-				SrfLanded = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
+				InSpace = You open hailing frequencies--this bizarre object, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n A loud "I SEE YOU" pours through your speakers in a burst of un-static. Once it calms down, you hear, "Please visualize a red square. Allow me to understand.... Approach if you must." You feel... withdrawn curiosity? This thing, whatever it is, feels scientifically interesting... but there are other phenomena, some just as ephemeral. Perhaps they would be more worthy of your attention.
+				SrfLanded = It opens hailing frequencies--this strange little construction of metal and meat and air, clinging to your spikes, is clearly artificial in nature. You decide to respond to this artificial radio source, and having already built your model of their physiology and psychology, responding in their own language should be trivial. "I have no need for you to stick around," you say, "I have already built an adequate model." The little mind doesn't seem to understand at first, stuck in some kind of feedback loop. The poor thing can't understand the distinction between it and you anymore. Well it's not you. You're not it. You shake your head, a little confused. Who are you?
+				//InSpace = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
+				//SrfLanded = You open hailing frequencies--this bizarre construction, hovering ominously above Zhandar, is clearly artificial in nature. Remarkably, you get a response.\n\n"Suul-suul. Blursh! Meeshaloob... Awasa Poa! Dagdag."
 			}
 		}
 		Body
@@ -176,6 +179,15 @@
 			Values
 			{
 				SrfLanded = And it is a song, a mere whisper, a dirge, a cry for help. It is exhorting the void to listen, demanding a response. That is life as a whole: the voice calling "I was here, dammit, listen!" Antichthon is the answer: I know you are here. I see you. You will be remembered. The processes that formed those spiral paths- they are the universe speaking. You can trace those spirals ever-downward, on scales from the planetary to the molecular. The fractal is all-encompassing. You believe, don't you? Let's go there and find out. Together, we will be remembered.
+			}
+		}
+		Body
+		{
+			name = PJ2/Ploob
+			Values
+			{
+				SrfLanded = The sky spins by at a dizzying speed, and you feel a weight in your head. Are... are there two of you? You feel your thoughts almost whispered back to you, and above them- louder- is some other influence. It is speaking of phenomena in the sky- Ilio spinning about itself, the asteroids rolling like marbles, others inward and out and across the stars-- And then its gaze is turned on you. The other you is like a..???..like a glove, tinted glasses, an interface. You feel yourself searched- understood, perhaps? You are seeing yourself, but you are... it feels like you're not aware of that. Something is coming through backwards, maybe? You feel yourself whisper, "Concluding experiment," and the feeling passes. You did not expect becoming a cosmonaut to involve anywhere near this thorough a psychological examination...
+
 			}
 		}
 	}
@@ -254,6 +266,14 @@
 			Values
 			{
 				InSpace = The object's magnetic field is highly complex, with each spiral structure corresponding to a magnetic pole.
+			}
+		}
+		Body
+		{
+			name = PJ2/Ploob
+			Values
+			{
+				InSpace = The object seems to have a substantial magnetic field of its own, as it rotates within Zhandar's magnetic field it likely generates a substantial amount of electricity, though you can't think of an obvious way to harness that as energy.
 			}
 		}
 	}
