--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/ScienceDefs/StockDefs/ScienceDefsMoons.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_b_HOMEWORLD/ScienceDefs/StockDefs/ScienceDefsMoons.cfg
@@ -85,6 +85,7 @@
 	{
 		Buzz = The instrument is reading a gravioli count which is over one hundred times too high according to established physics. You're not sure what this thing is, but it's not an asteroid, that's for sure.
 		BuzzSrfLandedCement = The instrument is reading a gravioli count which is over one hundred times too high according to established physics. You're not sure what this thing is, but it's not an asteroid, that's for sure. The gravitational field seems to be reduced in intensity with almost exactly the inverse square of the distance to the geometric center of Buzz, implying a massively concentrated core.
+		BuzzSrfLandedSignal = The instrument is reading small amounts of *positive* graviolis, voiding the warranty of your negative gravioli detector.
 		
 		Desmet = Gravioli counts indicate that Desmet has a fairly uniform composition, with a somewhat consistent surface gravity across its surface, implying it is not differentiated. \n\nYes, that's what it says. Ignore the actual readouts, because the Kerbal Space Program's part designers built a gravioli detector that pretends the object has point gravity, and we all know point gravity isn't real. The scientists resting against the fourth wall of the mission control center have confirmed that the actual gravioli readings say what we said they said.
 	}
