--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarylarge.cfg
@@ -25,7 +25,9 @@
 			@mass *= .985
 			//Is the Germy? (That)
 			sphereOfInfluence = 2695588.0
-			
+			albedo = 0.1 //this isn't correct, but it's what Leganeski's atmosphere curve was based on.
+			//leganeski's comment: // dense but relatively dark clouds means low albedo?
+			//if i ever re-redo atmospheres for Beddul-Dopale, i'd use 0.25-0.5 for albedo. -Luna.
 			initialRotation = 0
 			tidallyLocked = true
 			ScienceValues
@@ -128,11 +130,12 @@
 		}
 		Atmosphere
 		{
+			// 73.5% CO2, 25.5% N2, 1% H2O
 			enabled = True
 			oxygen = False
 			atmosphereDepth = 115000
 			atmosphereMolarMass = 0.03966
-			pressureCurveIsNormalized = True
+			pressureCurveIsNormalized = False
 			staticPressureASL = 1323.4
 			temperatureCurveIsNormalized = False 
 			temperatureLapseRate = 0.0037
@@ -140,37 +143,116 @@
 			ambientColor = 0.38363412,0.206983654,0.1548267066,0.300000012
 			lightColor = 0.974999994,0.569999993,0.349999976,0.5
 			addAFG = True
-			pressureCurve
-			{
-				key = 0 1
-				key = 0.1 0.733
-				key = 0.2 0.524
-				key = 0.3 0.363
-				key = 0.4 0.241
-				key = 0.5 0.151
-				key = 0.6 0.0878
-				key = 0.7 0.0446
-				key = 0.8 0.0179
-				key = 0.85 0.0040
-				key = 0.86 0.00326
-				key = 0.89 0.00193
-				key = 0.92 0.000967
-				key = 0.94 0.000341
-				key = 0.97 0.0000372
-				key = 0.99 0.000009243
-				key = 1 0
+			altitude = 73000
+			atmosphereDepth = 73000
+			adiabaticIndex = 1.26
+			pressureCurve	
+			{				
+				key =	0	1.32340E+03	0.00000E+00	-1.25825E-01
+				key =	5599	7.44203E+02	-8.30874E-02	-8.30874E-02
+				key =	10400	4.18496E+02	-5.42668E-02	-5.42668E-02
+				key =	14528	2.35338E+02	-3.56742E-02	-3.56742E-02
+				key =	18110	1.32340E+02	-2.28308E-02	-2.28308E-02
+				key =	21403	7.44203E+01	-1.33593E-02	-1.33593E-02
+				key =	24572	4.18496E+01	-7.81273E-03	-7.81273E-03
+				key =	27624	2.35338E+01	-4.56588E-03	-4.56588E-03
+				key =	30564	1.32340E+01	-2.66619E-03	-2.66619E-03
+				key =	33400	7.44203E+00	-1.55541E-03	-1.55541E-03
+				key =	36138	4.18496E+00	-9.06391E-04	-9.06391E-04
+				key =	38784	2.35338E+00	-5.27520E-04	-5.27520E-04
+				key =	41345	1.32340E+00	-3.06578E-04	-3.06578E-04
+				key =	43827	7.44203E-01	-1.77889E-04	-1.77889E-04
+				key =	46236	4.18496E-01	-1.03036E-04	-1.03036E-04
+				key =	48579	2.35338E-01	-5.95634E-05	-5.95634E-05
+				key =	50863	1.32340E-01	-3.43598E-05	-3.43598E-05
+				key =	53093	7.44203E-02	-1.97755E-05	-1.97755E-05
+				key =	55277	4.18496E-02	-1.13538E-05	-1.13538E-05
+				key =	57420	2.35338E-02	-6.50168E-06	-6.50168E-06
+				key =	59529	1.32340E-02	-3.71299E-06	-3.71299E-06
+				key =	61607	7.44203E-03	-2.12048E-06	-2.12048E-06
+				key =	63653	4.18496E-03	-1.21276E-06	-1.21276E-06
+				key =	65666	2.35338E-03	-6.93213E-07	-6.93213E-07
+				key =	67650	1.32340E-03	-3.95969E-07	-3.95969E-07
+				key =	69604	7.44203E-04	-2.25999E-07	-2.25999E-07
+				key =	71532	4.18496E-04	-1.28869E-07	-1.28869E-07
+				key =	73000	0.00000E+00	0.00000E+00	0.00000E+00
 			}
-			temperatureCurve
-			{
-				key = 0 566.15 
-				key = 10000 556.15 
-				key = 20000 486.15 
-				key = 30000 438.15
-				key = 40000 410.15
-				key = 55000 350.15
-				key = 70000 294.15
-				key = 80000 286.15
-				key = 100000 686.15
+
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	3.39	0	0
+				key =	38	0	-0.1719	-0.1719
+				key =	90	-12.61	-0.2793	0
+			}		
+		
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	18	0	0
+				key =	38	15.24	-0.1397	-0.1397
+				key =	90	5	-0.2269	0
+			}	
+			temperatureCurve				
+			{				
+				key =	0	558	0.00000E+00	-1.42883E-02
+				key =	5599	478	-1.42883E-02	-1.35388E-02
+				key =	10400	413	-1.35388E-02	-1.40504E-02
+				key =	14528	355	-1.40504E-02	-1.17253E-02
+				key =	18110	313	-1.17253E-02	-3.34042E-03
+				key =	21403	302	-3.34042E-03	-3.47113E-03
+				key =	24572	291	-3.47113E-03	-3.60419E-03
+				key =	27624	280	-3.60419E-03	-3.74150E-03
+				key =	30564	269	-3.74150E-03	-3.52609E-03
+				key =	33400	259	-3.52609E-03	-3.65230E-03
+				key =	36138	249	-3.65230E-03	-3.02343E-03
+				key =	38784	241	-3.02343E-03	-3.51425E-03
+				key =	41345	232	-3.51425E-03	-3.22321E-03
+				key =	43827	224	-3.22321E-03	-2.90577E-03
+				key =	46236	217	-2.90577E-03	-2.56082E-03
+				key =	48579	211	-2.56082E-03	-2.62697E-03
+				key =	50863	205	-2.62697E-03	-2.69058E-03
+				key =	53093	199	-2.69058E-03	-1.83150E-03
+				key =	55277	195	-1.83150E-03	-1.86654E-03
+				key =	57420	191	-1.86654E-03	-1.89663E-03
+				key =	59529	187	-1.89663E-03	-1.44370E-03
+				key =	61607	184	-1.44370E-03	-1.95503E-03
+				key =	63653	180	-1.95503E-03	-1.49031E-03
+				key =	65666	177	-1.49031E-03	-1.51210E-03
+				key =	67650	174	-1.51210E-03	-1.53531E-03
+				key =	69604	171	-1.53531E-03	-1.55602E-03
+				key =	71532	168	-1.55602E-03	-1.36240E-03
+				key =	73000	166	-1.36240E-03	0.00000E+00
+			}
+
+			temperatureSunMultCurve				
+			{				
+				key =	0	1.000	0.00000E+00	-8.00143E-05
+				key =	5599	0.552	-8.00143E-05	-7.12352E-05
+				key =	10400	0.210	-7.12352E-05	-5.83818E-05
+				key =	14528	-0.031	-5.83818E-05	-4.32719E-05
+				key =	18110	-0.186	-4.32719E-05	-2.64197E-05
+				key =	21403	-0.273	-2.64197E-05	-8.52004E-06
+				key =	24572	-0.300	-8.52004E-06	4.91481E-06
+				key =	27624	-0.285	4.91481E-06	1.22449E-05
+				key =	30564	-0.249	1.22449E-05	1.83357E-05
+				key =	33400	-0.197	1.83357E-05	2.33747E-05
+				key =	36138	-0.133	2.33747E-05	2.75888E-05
+				key =	38784	-0.060	2.75888E-05	3.04569E-05
+				key =	41345	0.018	3.04569E-05	3.26350E-05
+				key =	43827	0.099	3.26350E-05	3.40390E-05
+				key =	46236	0.181	3.40390E-05	3.49979E-05
+				key =	48579	0.263	3.49979E-05	3.45884E-05
+				key =	50863	0.342	3.45884E-05	3.45291E-05
+				key =	53093	0.419	3.45291E-05	3.29670E-05
+				key =	55277	0.491	3.29670E-05	3.12646E-05
+				key =	57420	0.558	3.12646E-05	2.93978E-05
+				key =	59529	0.620	2.93978E-05	2.64678E-05
+				key =	61607	0.675	2.64678E-05	2.34604E-05
+				key =	63653	0.723	2.34604E-05	1.98708E-05
+				key =	65666	0.763	1.98708E-05	1.56250E-05
+				key =	67650	0.794	1.56250E-05	1.12590E-05
+				key =	69604	0.816	1.12590E-05	6.74274E-06
+				key =	71532	0.829	6.74274E-06	2.04360E-06
+				key =	73000	0.832	2.04360E-06	0.00000E+00		
 			}
 			AtmosphereFromGround
 			{
