--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScienceDefs/BeddulDopaleScience.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/ScienceDefs/BeddulDopaleScience.cfg
@@ -90,13 +90,13 @@
 	@RESULTS
 	{
 		DopaleFlying = Dopale's atmosphere is mostly nitrogen.
-		DopaleFlyingLow = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of oxygen, ozone, and volcanic ash particulate.
-		DopaleSrfLanded = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of oxygen, ozone, and volcanic ash particulate.
-		DopaleSrfSplashed = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of water vapor, oxygen, ozone, and volcanic ash particulate.
+		DopaleFlyingLow = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of oxygen, ozone, and volcanic ash particulate. 93.1% N2, 6.8% CO2, 0.1% H2O.
+		DopaleSrfLanded = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of oxygen, ozone, and volcanic ash particulate. 93.1% N2, 6.8% CO2, 0.1% H2O.
+		DopaleSrfSplashed = Dopale's atmosphere is mostly nitrogen, with a considerable about of carbon dioxide, and traces of water vapor, oxygen, ozone, and volcanic ash particulate. 92.2% N2, 6.8% CO2, 1% H2O.
 		
 		BeddulFlyingHigh = Beddul's atmosphere is mostly carbon dioxide.
-		BeddulFlyingLow = Beddul's atmosphere is mostly carbon dioxide, with a smaller proportion of nitrogen. Its clouds are made of sulphuric acid, water vapor, and large volumes of red-orange volcanic ash particles.
-		BeddulSrfLanded = Beddul's atmosphere is mostly carbon dioxide, with a smaller proportion of nitrogen, and traces of sulphuric acid and steam.
+		BeddulFlyingLow = Beddul's atmosphere is mostly carbon dioxide, with a smaller proportion of nitrogen. 73.5% CO2, 25.5% N2, 1% H2O. Its clouds are made of sulphuric acid, water vapor, and large volumes of red-orange volcanic ash particles.
+		BeddulSrfLanded = Beddul's atmosphere is mostly carbon dioxide, with a smaller proportion of nitrogen. 73.5% CO2, 25.5% N2, 1% H2O. Its clouds are made of sulphuric acid, water vapor, and large volumes of red-orange volcanic ash particles.
 	}
 }
 @EXPERIMENT_DEFINITION:HAS[#id[gravityScan]]:FOR[PJ2]
