--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/1_Viszra.cfg
@@ -426,7 +426,8 @@
 			oxygen =	False
 			altitude =	35000
 			adiabaticIndex =	1.44
-			atmosphereMolarMass =	0.0022
+			//atmosphereMolarMass =	0.0022 //originally hydrogen
+			atmosphereMolarMass = 0.02741  // nitrogen, 5% methane -Leganeski
 			temperatureSeaLevel =	93.6
 			staticPressureASL =	202.65
 			AtmosphereFromGround
