--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/5_Cricoid.cfg
@@ -494,7 +494,8 @@
 			oxygen =	False
 			altitude =	35000
 			adiabaticIndex =	1.44
-			atmosphereMolarMass =	0.0022
+			//atmosphereMolarMass =	0.0022 //originally Hydrogen.
+			atmosphereMolarMass = 0.02801  // nitrogen -Leganeski
 			temperatureSeaLevel =	88
 			staticPressureASL =	7.09E-01
 			AtmosphereFromGround
