--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/G1_Zeppeli.cfg
@@ -477,7 +477,8 @@
 			oxygen =	False
 			altitude =	40000	
 			adiabaticIndex =	1.44
-			atmosphereMolarMass =	0.0022
+			//atmosphereMolarMass =	0.0022 //Originally hydrogen.
+			atmosphereMolarMass = 0.02805  // nitrogen, 2% ethane -Leganeski
 			temperatureSeaLevel =	91
 			staticPressureASL =	10.1325
 			AtmosphereFromGround
