--- a/GameData/PJ2/Parts/AntennaScience.cfg
+++ b/GameData/PJ2/Parts/AntennaScience.cfg
@@ -16,7 +16,8 @@
 		usageReqMaskExternal = -1
 	}
 }
-//Spoilers below!
+//Science definitions below.
+//that is... Spoilers below!
 
 
 
@@ -104,6 +105,15 @@ USS Twilight computer: This has been repetition two billion, three hundred seven
 				SrfLandedVolcanicHotspot = You're unlikely to get a response any time soon, you'll just have to wait for the recovery crews to arrive.
 				SrfLandedScorchedBasins = You're unlikely to get a response any time soon, you'll just have to wait for the recovery crews to arrive.
 				SrfLandedScorchedCraters = You're unlikely to get a response any time soon, you'll just have to wait for the recovery crews to arrive.
+			}
+		}
+		Body
+		{
+			name = PJ2/Buzz
+			Values
+			{
+				SrfLanded = You open hailing frequencies, as a lark. Remarkably, you can pick up a faint repeating signal, coming from somewhere on Buzz!
+				SrfLandedSignal = You open hailing frequencies. You get a response: "I'm stuck down here. Can someone help me out? I'm stuck down here in the center. I'm covered in rubble and cement all around me. Can someone help me out?" This spooks you severely, until you realize this is probably just some elaborate prank, and someone on Armstrong is bouncing a radio signal off of the surface of Buzz. You respond, "very funny," sincerely hoping that you're right.
 			}
 		}
 		
