--- a/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
+++ b/GameData/PJ2/KopernicusFiles/1_InnerSystem/Gwargin/2_Ber.cfg
@@ -24,8 +24,9 @@
 			initialRotation = 110
 			
 
-			// 1/100 earth mass in kilograms
-			mass = 1.25e13
+			//mass = 1.25e13 //original mass by Wolf Rayet. Leganeski raised by 100x which is too high for a ring moonlet. Raised by 50x instead.
+			mass = 6.25e14
+			//density = 1.88 gcm3 RSS scale
 			ScienceValues
  		        {
 				//uh
