--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_d_trojan/IlioC_dt_binarysmall.cfg
@@ -19,7 +19,8 @@
 			//do not leave this as the placeholder radius
 			radius = 550000
 			//i didnt :DDDDD
-			
+			albedo = 0.17  // water and no clouds means low albedo; 0.17 made the temperature work out correctly -Leganeski
+			//This albedo determination makes sense -Luna.
 			// 1/100 earth mass in kilograms
 			mass = 5.97219e22
 			@mass *= .892
@@ -133,7 +134,7 @@
 			oxygen = False
 			atmosphereDepth = 75000
 			atmosphereMolarMass = 0.02909
-			pressureCurveIsNormalized = True
+			pressureCurveIsNormalized = False
 			staticPressureASL = 115.57
 			temperatureCurveIsNormalized = False 
 			temperatureLapseRate = 0.0034
@@ -141,36 +142,105 @@
 			ambientColor = 0.1548267066,0.206983654,0.38363412,0.300000012
 			lightColor = 0.974999994,0.569999993,0.349999976,0.5
 			addAFG = True
-			pressureCurve
-			{
-				key = 0 1
-				key = 0.1 0.733
-				key = 0.2 0.524
-				key = 0.3 0.363
-				key = 0.4 0.241
-				key = 0.5 0.151
-				key = 0.6 0.0878
-				key = 0.7 0.0446
-				key = 0.8 0.0179
-				key = 0.9 0.0040
-				key = 0.91 0.00326
-				key = 0.93 0.00193
-				key = 0.95 0.000967
-				key = 0.97 0.000341
-				key = 0.99 0.0000372
-				key = 0.995 0.000009243
-				key = 1 0
+			altitude = 63000
+			atmosphereDepth = 63000
+			adiabaticIndex = 1.39
+			pressureCurve				
+			{				
+				key =	0	1.15570E+02	0.00000E+00	-1.85041E-02
+				key =	3540	6.49898E+01	-1.07476E-02	-1.07476E-02
+				key =	6973	3.65464E+01	-6.23896E-03	-6.23896E-03
+				key =	10303	2.05516E+01	-3.61950E-03	-3.61950E-03
+				key =	13536	1.15570E+01	-2.09840E-03	-2.09840E-03
+				key =	16677	6.49898E+00	-1.21564E-03	-1.21564E-03
+				key =	19731	3.65464E+00	-7.03671E-04	-7.03671E-04
+				key =	22702	2.05516E+00	-4.06958E-04	-4.06958E-04
+				key =	25595	1.15570E+00	-2.35134E-04	-2.35134E-04
+				key =	28415	6.49898E-01	-1.35718E-04	-1.35718E-04
+				key =	31167	3.65464E-01	-7.82502E-05	-7.82502E-05
+				key =	33855	2.05516E-01	-4.50639E-05	-4.50639E-05
+				key =	36485	1.15570E-01	-2.59203E-05	-2.59203E-05
+				key =	39059	6.49898E-02	-1.48898E-05	-1.48898E-05
+				key =	41583	3.65464E-02	-8.54187E-06	-8.54187E-06
+				key =	44062	2.05516E-02	-4.89334E-06	-4.89334E-06
+				key =	46498	1.15570E-02	-2.79915E-06	-2.79915E-06
+				key =	48896	6.49898E-03	-1.60103E-06	-1.60103E-06
+				key =	51256	3.65464E-03	-9.15556E-07	-9.15556E-07
+				key =	53579	2.05516E-03	-5.23252E-07	-5.23252E-07
+				key =	55867	1.15570E-03	-2.98832E-07	-2.98832E-07
+				key =	58123	6.49898E-04	-1.70523E-07	-1.70523E-07
+				key =	60349	3.65464E-04	-9.72123E-08	-9.72123E-08
+				key =	63000	0.00000E+00	0.00000E+00	0.00000E+00
 			}
-			temperatureCurve
-			{
-				key = 0 284.15 
-				key = 10000 275.15 
-				key = 20000 264.15 
-				key = 30000 273.15
-				key = 40000 260.15
-				key = 50000 241.15
-				key = 60000 296.15
-				key = 75000 346.15
+
+			temperatureLatitudeBiasCurve				
+			{				
+				key =	0	8.27	0	0
+				key =	38	0	-0.4191	-0.4191
+				key =	90	-30.73	-0.6807	0
+			}		
+		
+			temperatureLatitudeSunMultCurve				
+			{				
+				key =	0	44	0	0
+				key =	38	37.43	-0.3331	-0.3331
+				key =	90	13	-0.5411	0
+			}	
+			
+			temperatureCurve				
+			{				
+				key =	0	265	0.00000E+00	-8.47458E-04
+				key =	3540	262	-8.47458E-04	-8.73871E-04
+				key =	6973	259	-8.73871E-04	-9.00901E-04
+				key =	10303	256	-9.00901E-04	-1.23724E-03
+				key =	13536	252	-1.23724E-03	-1.59185E-03
+				key =	16677	247	-1.59185E-03	-1.96464E-03
+				key =	19731	241	-1.96464E-03	-2.01952E-03
+				key =	22702	235	-2.01952E-03	-2.41963E-03
+				key =	25595	228	-2.41963E-03	-2.12766E-03
+				key =	28415	222	-2.12766E-03	-2.18023E-03
+				key =	31167	216	-2.18023E-03	-2.23214E-03
+				key =	33855	210	-2.23214E-03	-2.28137E-03
+				key =	36485	204	-2.28137E-03	-1.94250E-03
+				key =	39059	199	-1.94250E-03	-1.98098E-03
+				key =	41583	194	-1.98098E-03	-2.01694E-03
+				key =	44062	189	-2.01694E-03	-1.64204E-03
+				key =	46498	185	-1.64204E-03	-1.66806E-03
+				key =	48896	181	-1.66806E-03	-1.69492E-03
+				key =	51256	177	-1.69492E-03	-1.29143E-03
+				key =	53579	174	-1.29143E-03	-1.74825E-03
+				key =	55867	170	-1.74825E-03	-1.32979E-03
+				key =	58123	167	-1.32979E-03	-1.34771E-03
+				key =	60349	164	-1.34771E-03	-7.54432E-04
+				key =	63000	162	-7.54432E-04	0.00000E+00
+			}
+
+			temperatureSunMultCurve				
+			{				
+				key =	0	1.000	0.00000E+00	-9.35028E-05
+				key =	3540	0.669	-9.35028E-05	-8.73871E-05
+				key =	6973	0.369	-8.73871E-05	-7.65766E-05
+				key =	10303	0.114	-7.65766E-05	-6.21714E-05
+				key =	13536	-0.087	-6.21714E-05	-4.39351E-05
+				key =	16677	-0.225	-4.39351E-05	-2.22659E-05
+				key =	19731	-0.293	-2.22659E-05	-1.34635E-06
+				key =	22702	-0.297	-1.34635E-06	6.22191E-06
+				key =	25595	-0.279	6.22191E-06	1.13475E-05
+				key =	28415	-0.247	1.13475E-05	1.48983E-05
+				key =	31167	-0.206	1.48983E-05	1.82292E-05
+				key =	33855	-0.157	1.82292E-05	2.05323E-05
+				key =	36485	-0.103	2.05323E-05	2.21445E-05
+				key =	39059	-0.046	2.21445E-05	2.25832E-05
+				key =	41583	0.011	2.25832E-05	2.25898E-05
+				key =	44062	0.067	2.25898E-05	2.25780E-05
+				key =	46498	0.122	2.25780E-05	2.12677E-05
+				key =	48896	0.173	2.12677E-05	1.90678E-05
+				key =	51256	0.218	1.90678E-05	1.76496E-05
+				key =	53579	0.259	1.76496E-05	1.44231E-05
+				key =	55867	0.292	1.44231E-05	1.10816E-05
+				key =	58123	0.317	1.10816E-05	7.18778E-06
+				key =	60349	0.333	7.18778E-06	3.01773E-06
+				key =	63000	0.341	3.01773E-06	0.00000E+00
 			}
 			AtmosphereFromGround
 			{
