--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_b/2_Jejunum.cfg
@@ -321,7 +321,7 @@
 		{
 			ocean = True
 			oceanColor = 1,0.66,0,1
-			density = 0.89 //Methane
+			density = 3.1 //lava
 			Material
 			{
 				color = 1,0.66,0,1
@@ -401,7 +401,8 @@
 			oxygen =	False
 			altitude =	25000
 			adiabaticIndex =	1.44
-			atmosphereMolarMass =	0.0022
+			//atmosphereMolarMass =	0.0022 //originally hydrogen.
+			atmosphereMolarMass = 0.02801  // who knows, but I'm assuming nitrogen -Leganeski
 			temperatureSeaLevel =	111
 			staticPressureASL =	5.06625
 			ambientColor = 0.269230962,0.0500000603,0,0
