filepath fixes for lovely linux likers.
* replace "\" with "/" in Tritonis configs.
* fix case on Kialla system textures.

--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_B.cfg
@@ -47,8 +47,8 @@
 				
 			Material
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2VenusColor.png
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2VenusNormal.dds
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2VenusColor.png
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2VenusNormal.dds
 				
 				color = 1, 1, 1, 1
 				specColor = 0, 0, 0, 1
@@ -219,7 +219,7 @@
 				{
 					VertexHeightMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2VenusHeight.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2VenusHeight.png
 						offset = -100
 						deformity = 5000
 						scaleDeformityByRadius = False
@@ -229,7 +229,7 @@
 					}
 					VertexColorMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2VenusPQSColorv2.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2VenusPQSColorv2.png
 						order = 10
 						enabled = True
 						name = Color
