--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_C.cfg
@@ -46,8 +46,8 @@
 			%type = AtmosphericStandard
 			Material
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2moon2Colorv3.png
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\IlioC_Greek_C_Normal.png
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2moon2Colorv3.png
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/IlioC_Greek_C_Normal.png
 				
 				color = 1, 1, 1, 1
 				specColor = 0,0,0,1
@@ -66,7 +66,7 @@
 			{
 					VertexHeightMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2moon2height.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2moon2height.png
 						offset = 0
 						deformity = 8500
 						scaleDeformityByRadius = False
@@ -76,7 +76,7 @@
 					}
 					VertexColorMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2moon2Colorv3.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2moon2Colorv3.png
 						order = 10
 						enabled = True
 						name = Color
