--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_D.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_D.cfg
@@ -47,8 +47,8 @@
 				
 			Material
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Icy_color3.png
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Trithum_Normal.png
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/Icy_color3.png
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/Trithum_Normal.png
 				
 				color = 1, 1, 1, 1
 				specColor = 0, 0, 0, 1
@@ -64,7 +64,7 @@
 			{
 					VertexHeightMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Icy_height2.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/Icy_height2.png
 						offset = 0
 						deformity = 12000
 						scaleDeformityByRadius = False
@@ -74,7 +74,7 @@
 					}
 					VertexColorMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\Icy_color3.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/Icy_color3.png
 						order = 10
 						enabled = True
 						name = Color
