--- a/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
+++ b/GameData/PJ2/KopernicusFiles/3_OuterSystem/IlioABC_d/KopernicusFiles/Kialla/3_Nevig.cfg
@@ -3,8 +3,8 @@
 	Body
 	{
 		name = Nevig
-		cacheFile = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/Cache/Nevig.bin
-		identifier = PJ2/Nevig
+		cacheFile = PJ2/Kopernicusfiles/3_OuterSystem/IlioABC_d/Cache\nevig.bin
+		identifier = PJ2\nevig
 		Template
 		{
 			name = Eeloo
@@ -78,8 +78,8 @@
 			}
 			OnDemand
 			{
-				texture = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Nevig_color.dds
-				normals = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Nevig_normal.dds
+				texture = PJ2/Kopernicusfiles/3_OuterSystem/IlioABC_d/PluginData\nevig_color.dds
+				normals = PJ2/Kopernicusfiles/3_OuterSystem/IlioABC_d/PluginData\nevig_normal.dds
 			}
 		}
 		PQS
@@ -93,13 +93,13 @@
 			{
 				VertexColorMap
 				{
-					map = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Nevig_color.dds
+					map = PJ2/Kopernicusfiles/3_OuterSystem/IlioABC_d/PluginData\nevig_color.dds
 					enabled = true
 					order = 5
 				}
 				VertexHeightMap
 				{
-					map = PJ2/Kopernicusfiles/3_Outersystem/IlioABC_d/PluginData/Nevig_height.png
+					map = PJ2/Kopernicusfiles/3_OuterSystem/IlioABC_d/PluginData\nevig_height.png
 					deformity = 2500
 					offset = 100
 					scaleDeformityByRadius = false
