--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/IlioC_Greek_A.cfg
@@ -48,8 +48,8 @@
 				
 			Material
 			{
-				texture = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2asteroidColor.png
-				normals = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\IlioC_Greek_A_Normal.png
+				texture = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2asteroidColor.png
+				normals = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/IlioC_Greek_A_Normal.png
 				
 				color = 1, 1, 1, 1
 				specColor = 0,0,0,1
@@ -68,7 +68,7 @@
 				{
 					VertexHeightMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2asteroidHeight.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2asteroidHeight.png
 						offset = 0
 						deformity = 8000
 						scaleDeformityByRadius = False
@@ -78,7 +78,7 @@
 					}
 					VertexColorMap
 					{
-						map = PJ2\KopernicusFiles\2_PyriSystem\IlioC_0_Greek\PluginData\PJ2asteroidColor.png
+						map = PJ2/KopernicusFiles/2_PyriSystem/IlioC_0_Greek/PluginData/PJ2asteroidColor.png
 						order = 10
 						enabled = True
 						name = Color
